--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                         <h3>Java Developer</h3>
                         <h4>Megasoft Education</h4>
                         <h5>2018 - 2020</h5>
-                        <p> I have done Training at Megasoft Educations PVT.LTD. I worked as a JAVA Developer and done projects also.I learned AD.JAVA (collection,JDBC,SERVLET,JSP) during my training period.</p>
+                        <p> I have done Training at Megasoft Educations PVT.LTD. I worked as a JAVA Developer and done projects also.I have learned AD.JAVA also.(collection,JDBC,SERVLET,JSP) during my training period.</p>
                     </li>
 
                 </ul>
