--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     </div>
                     <div class="service-content">
                         <h4>Organised coding contest</h4>
-                        <p>I have organised so many coding competition on my college like Google Hashcode and codeFight.etc</p>
+                        <p>I have organised so many coding competition in my college like Google Hashcode and codeFight.etc</p>
                     </div>
                 </div>
 
