--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     </div>
                     <div class="service-content">
                         <h4> ANDROID App Development</h4>
-                        <p>I have build apps using Android , i have made a applications like calculator Food app etc.</p>
+                        <p>I have build apps using Android , i have made an applications like calculator,Food app etc.</p>
                     </div>
                 </div>
 
