--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="main-menu">
                     <div class="navbar navbar-cus">
                         <div class="navbar-header">
-                            <a href="index-particles.html" class="navbar-brand"><span class="logo">ATUL<span>ANAND</span></span></a> <!--change logo name-->
+                            <a href="index.html" class="navbar-brand"><span class="logo">ATUL<span>ANAND</span></span></a> <!--change logo name-->
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
@@ -851,7 +851,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                <p>&copy; All Right Reserved By <a href="https://www.yourwebsite.com/MouriTheme" target="_blank">MouriTheme</a></p> <!--edit here-->
+                <p>&copy; All Right Reserved By <a href="https://www.yourwebsite.com/MouriTheme" target="_blank">ATUL ANAND</a></p> <!--edit here-->
             </div>
         </div>
     </div>
