--- a/index.html
+++ b/index.html
@@ -710,12 +710,12 @@
 
                         <div class="row">
                             <div class="col-md-8 col-xs-8">
-                                <h2>DEBRAJ SENGUPTA</h2> <!--edit here-->
-                                <h3>Sr. Developer at Codepth.</h3> <!--edit here-->
+                                <h4>DEBRAJ SENGUPTA</h4> <!--edit here-->
+                                <h7>Sr. Developer at Codepth.</h7> <!--edit here-->
                             </div>
                             <div class="col-md-4 col-xs-4">
-                                <div class="testi-img">
-                                    <img src="images/testimonial/testi2.jpg" alt="testimonial image"> <!--edit image here-->
+                                <div class="testii-img">
+                                    <img src="images/testimonial/testii2.jpg" alt="testimonial image"> <!--edit image here-->
                                 </div>
                             </div>
                         </div>
@@ -730,8 +730,8 @@
 
                         <div class="row">
                             <div class="col-md-8 col-xs-8">
-                                <h2>SUMIT KUMAR</h2> <!--edit here-->
-                                <h3>Developer at Megasoft Educations.</h3> <!--edit here-->
+                                <h6>SUMIT KUMAR</h6> <!--edit here-->
+                                <h5>Developer at Megasoft Educations.</h5> <!--edit here-->
                             </div>
                             <div class="col-md-4 col-xs-4">
                                 <div class="testi-img">
