--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     </div>
                     <div class="service-content">
                         <h4>Java Developer</h4>
-                        <p>I am a Java developer also for Back-end i use java for making websites . i love to do coding in java. I have worked so many projects in java under Megasoft Educations and also i got certificate of ExelLence  in java.</p>
+                        <p>I am a Java developer for Back-end i use JSP. i love to do coding in java. I have worked in so many projects in java under Megasoft Educations and also i got certificate of ExelLence  in java.</p>
                     </div>
                 </div>
 
