--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <ul class="about-list">
                                 <li> <span class="title">Phone</span> <span class="value">7684967808</span> </li>
                                 <li> <span class="title">Address</span> <span class="value">Anapurna vihar Apartment vijay nagar Patna</span> </li>
-                                <li> <span class="title">Hobby</span> <span class="value">Cricket ,WEIGHTLIFTING</span> </li>
+                                <li> <span class="title">Hobby</span> <span class="value">Cricket ,Weightlifting</span> </li>
                             </ul>
                         </div>
                     </div>
@@ -263,7 +263,7 @@
                     </div>
                     <div class="service-content">
                         <h4>Java Developer</h4>
-                        <p>I am a Java developer for Back-end i use JSP. i love to do coding in java. I have worked in so many projects in java under Megasoft Educations and also i got certificate of ExelLence  in java.</p>
+                        <p>I am a Java developer for Back-end i use JSP. I love to do coding in java. I have worked in so many projects in java under Megasoft Educations and also i got certificate of ExelLence  in java.</p>
                     </div>
                 </div>
 
