--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     </div>
                     <div class="service-content">
                         <h4>DATABASE</h4>
-                        <p>I use Oracle , Mysql for storing data . whatever the projects that i have made so far i have used oracle and Mysql</p>
+                        <p>I use Oracle , Mysql for storing data . whatever the projects that i have made so far.I have used oracle and Mysql</p>
                     </div>
                 </div>
 
@@ -291,7 +291,7 @@
                     </div>
                     <div class="service-content">
                         <h4>Organised coding contest</h4>
-                        <p>I have organised so many coding competition in my college like Google Hashcode and codeFight.etc</p>
+                        <p>I have organised coding competition in my college like Google Hashcode and codeFight.etc</p>
                     </div>
                 </div>
 
