--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     </div>
                     <div class="service-content">
                         <h4>Java Developer</h4>
-                        <p>I am a Java developer for Back-end i use JSP. I love to do coding in java. I have worked in so many projects in java under Megasoft Educations and also i got certificate of ExelLence  in java.</p>
+                        <p>I am a Java developer, for Back-end i use JSP. I love to do coding in java. I have worked in so many projects in java under Megasoft Educations and also i got certificate of Excellence  in java from Megasoft.</p>
                     </div>
                 </div>
 
